--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,45 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  width: 100vw;
+  height: 100vh;
 }
+
+#root{
+	width: inherit;
+	height: inherit;
+}
+
+.game{
+	width: 50%;
+	height: 50%;
+}
+
+.game-board{
+	width: 100%;
+	height: 100%;
+}
+
+.board{
+	width: 100%;
+	height: 100%;
+}
+
+.board-row{
+	width: 100%;
+	height: 12.5%;
+}
+
+.square{
+	width: 12.5%;
+	height: 100%;
+}
+
+.R{
+	background: red;
+}
+
+.B{
+	background: black;
+}
+
