--- a/src/index.css
+++ b/src/index.css
@@ -29,11 +29,17 @@ body {
 .board-row{
 	width: 100%;
 	height: 12.5%;
+
+	display: flex;
+	align-items: flex-start;
 }
 
 .square{
 	width: 12.5%;
 	height: 100%;
+	padding: 0;
+	border: white solid 1px;
+	color: white;
 }
 
 .R{
